# astroport-core

./: Cargo.toml
contracts/legacy_pair_adapter/: Cargo.toml  README.md
contracts/legacy_pair_adapter/src/: contract.rs  state.rs
